# Murkmaw

./: README.md
murkmaw/: Cargo.toml
murkmaw/src/: crawler.rs  image_utils.rs  main.rs
murkmaw/src/logger/: mod.rs  progress_bar.rs  spinner.rs
murkmaw/src/model/: image.rs  link.rs  link_graph.rs  mod.rs
