[package]
name = "murkmaw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.1"  
future = "0.3.21"  
html_parser = "0.7.1"
log = "0.4.20" 
reqwest = { version = "0.11.21", features = ["json"] }  
tokio = { version = "1.32.0", features = ["full"] }   
url = "2.5.0"  
